--- a/admin.html
+++ b/admin.html
@@ -25,7 +25,7 @@
         <img src="images/logo.png" alt="TwinkerTurf Logo" style="width: 110px;">
       </label>
       <ul>
-        <li><a href="homepage.html" accesskey="h" title="Alt + H">Home</a></li>
+        <li><a href="index.html" accesskey="h" title="Alt + H">Home</a></li>
         <li><a href="Activity.html" accesskey="a" title="Alt + A">Activities</a></li>
         <li><a href="Coaches.html" accesskey="c" title="Alt + C">Coaches</a></li>
         <li><a href="Admin.html" accesskey="d" title="Alt + D">Administrator dashboard</a></li>
