--- a/Register_a_New_Kid_Page.html
+++ b/Register_a_New_Kid_Page.html
@@ -29,7 +29,7 @@
                 <img src="images/logo.png" alt="TwinkerTurf Logo" style="width: 110px;">
             </label>
             <ul>
-                <li><a href="homepage.html" accesskey="h" title="Shortcut: Alt + H">Home</a></li>
+                <li><a href="index.html" accesskey="h" title="Shortcut: Alt + H">Home</a></li>
                 <li><a href="activity.html" accesskey="a" title="Shortcut: Alt + A">Activities</a></li>
                 <li><a href="Coaches.html" accesskey="c" title="Shortcut: Alt + C">Coaches</a></li>
                 <li><a href="admin.html" accesskey="m" title="Shortcut: Alt + M">Administrator dashboard</a></li>
@@ -43,7 +43,7 @@
     <main class="container">
 	
          <p class="Breadcrumbs">
-            <a href="homepage.html">Home</a> > <a href="ParentPage.html">Parent dashboard</a><a href="Register_a_New_Kid_Page.html"> > Register a New Kid</a>
+            <a href="index.html">Home</a> > <a href="ParentPage.html">Parent dashboard</a><a href="Register_a_New_Kid_Page.html"> > Register a New Kid</a>
        
 	   
         <div class="form-container">
