--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
 
   <!-- Breadcrumbs -->
   <p class="Breadcrumbs">
-    <a href="homepage.html">Home</a> &gt;
+    <a href="index.html">Home</a> &gt;
     <a href="Administrator.html">Administrator dashboard</a>
   </p>
 
