--- a/ParentPage.html
+++ b/ParentPage.html
@@ -22,7 +22,7 @@
         <img src="images/logo.png" alt="TwinkerTurf Logo" style="width: 110px;">
       </label>
       <ul>
-        <li><a href="homepage.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="activity.html">Activities</a></li>
         <li><a href="Coaches.html">Coaches</a></li>
         <li><a href="admin.html">Administrator dashboard</a></li>
@@ -33,7 +33,7 @@
 
   <main class="main-content">
     <p class="Breadcrumbs">
-      <a href="homepage.html">Home</a> > <a href="ParentPage.html">Parent dashboard</a>
+      <a href="index.html">Home</a> > <a href="ParentPage.html">Parent dashboard</a>
     </p>
 
     <div class="parent-dashboard">
