--- a/Coaches.html
+++ b/Coaches.html
@@ -28,7 +28,7 @@
                 <img src="images/logo.png" alt="TwinkerTurf Logo" style="width: 110px;">
             </label>
             <ul>
-                <li><a href="homepage.html" accesskey="h" title="Shortcut: Alt + H">Home</a></li>
+                <li><a href="hindex.html" accesskey="h" title="Shortcut: Alt + H">Home</a></li>
                 <li><a href="activity.html" accesskey="a" title="Shortcut: Alt + A">Activities</a></li>
                 <li><a href="Coaches.html" accesskey="c" title="Shortcut: Alt + C">Coaches</a></li>
                 <li><a href="admin.html" accesskey="m" title="Shortcut: Alt + M">Administrator dashboard</a></li>
@@ -41,7 +41,7 @@
 
         <!-- Breadcrumbs -->
         <p class="Breadcrumbs">
-            <a href="homepage.html">Home</a> > <a href="Coaches.html">Coaches</a>
+            <a href="index.html">Home</a> > <a href="Coaches.html">Coaches</a>
         </p>
 
         <!-- Start of Coaches Page -->
